; ModuleID = '/home/carl/AnghaBench/netdata/streaming/extr_rrdpush.c_rrdpush_receiver_permission_denied.c'
source_filename = "/home/carl/AnghaBench/netdata/streaming/extr_rrdpush.c_rrdpush_receiver_permission_denied.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.web_client = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [68 x i8] c"You are not permitted to access this. Check the logs for more info.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rrdpush_receiver_permission_denied(%struct.web_client* %0) #0 {
  %2 = alloca %struct.web_client*, align 8
  store %struct.web_client* %0, %struct.web_client** %2, align 8
  %3 = load %struct.web_client*, %struct.web_client** %2, align 8
  %4 = getelementptr inbounds %struct.web_client, %struct.web_client* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @buffer_flush(i32 %6)
  %8 = load %struct.web_client*, %struct.web_client** %2, align 8
  %9 = getelementptr inbounds %struct.web_client, %struct.web_client* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @buffer_sprintf(i32 %11, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i64 0, i64 0))
  ret i32 401
}

declare dso_local i32 @buffer_flush(i32) #1

declare dso_local i32 @buffer_sprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
